--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "homepage": "https://haneyx.github.io/React.ConsumirApiExample",
+  "homepage": "https://haneyx.github.io/React.ConsumirApiSample",
   "name": "app",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
